--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "barryvdh/laravel-dompdf": "^0.8.5",
         "netresearch/jsonmapper": "^4.0",
         "psr/container": "1.0.0",
-        "dompdf/dompdf": "^0.8"
+        "dompdf/dompdf": "^0.8",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
